update the module name title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ember Rocks Barebone",
+  "name": "Ember_Rocks_Barebone",
   "description": "Ember Application Boilerplate",
   "author": {
     "name": "Matt Ma",
